--- a/package.json
+++ b/package.json
@@ -5,11 +5,15 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "backend": "node ./server/app.js"
   },
   "dependencies": {
+    "apexcharts": "^3.23.0",
     "core-js": "^3.6.5",
-    "vue": "^2.6.11"
+    "socket.io-client": "^3.0.4",
+    "vue": "^2.6.11",
+    "vue-apexcharts": "^1.6.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
